--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	</parent>
 
 	<properties>
-		<start-class>quiz.Application</start-class>
+		<start-class>org.kecmen.Application</start-class>
 		<main.basedir>${basedir}/../..</main.basedir>
 		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
 	</properties>
@@ -76,4 +76,5 @@
 	</build>
 
 	<packaging>war</packaging>
+	<name>Quiz</name>
 </project>
