--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>jsp-boot-tst</groupId>
-	<artifactId>jsp-boot-tst</artifactId>
+	<groupId>org.kecmen</groupId>
+	<artifactId>quiz</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<parent>
@@ -38,7 +38,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
@@ -63,7 +62,6 @@
 			<artifactId>standard</artifactId>
 			<version>1.1.2</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -74,7 +72,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<packaging>war</packaging>
-	<name>Quiz</name>
 </project>
