--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.view.prefix: /WEB-INF/jsp/
 spring.view.suffix: .jsp
-spring.datasource.url = jdbc:mysql://localhost:3306/quiz
+spring.datasource.url = jdbc:mysql://localhost:3306/quiz?useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username = root
 spring.datasource.password = MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
